# quackdb

./: CHANGELOG.md  Cargo.toml  LICENSE  README.adoc  README.md
crates/quackdb-conversion/: Cargo.toml
crates/quackdb-conversion/src/: append.rs  append_param.rs  bind.rs  bind_param.rs  lib.rs  param.rs  to_duckdb.rs
crates/quackdb-conversion/src/to_duckdb/: chrono.rs  mod.rs  primitive.rs  time.rs
crates/quackdb-internal/: Cargo.toml
crates/quackdb-internal/src/: appender.rs  arrow.rs  config.rs  connection.rs  data_chunks.rs  database.rs  lib.rs  query_result.rs  result.rs  statement.rs  table_function.rs  type_id.rs  value.rs  vector.rs
crates/quackdb-internal/src/conversion/: append.rs  bind.rs  mod.rs  to_duckdb.rs
crates/quackdb-internal/src/conversion/to_duckdb/: chrono.rs  mod.rs  primitive.rs
crates/quackdb-internal/src/handles/: appender.rs  arrow.rs  config.rs  connection.rs  database.rs  logical_type.rs  mod.rs  replacement_scan.rs  statement.rs
crates/quackdb-internal/src/handles/table_function/: bind_info.rs  function_info.rs  init_info.rs  mod.rs  table_function.rs
crates/quackdb-internal/src/table_function/: bind_info.rs  function_info.rs  init_info.rs  table_function.rs
crates/quackdb-internal/src/types/: logical.rs  mod.rs  param.rs  to_duckdb.rs  type_id.rs
crates/quackdb-internal/src/vector/: data.rs  mod.rs  validity.rs  vector.rs
src/: appender.rs  arrow.rs  config.rs  connection.rs  cutils.rs  data_chunks.rs  database.rs  error.rs  ffi.rs  lib.rs  logical_type.rs  query.rs  query_result.rs  replacement_scan.rs  rows.rs  statement.rs  types.rs  value.rs  vector.rs
src/arrow/: iters.rs  mod.rs
src/table_function/: info.rs  mod.rs
src/types/: logical.rs  logical_kind.rs  logical_type.rs  mod.rs  primitive.rs  raw.rs
src/vector/: validity.rs  vector.rs
