[workspace]
members = ["crates/*"]

[package]
name = "quackdb"
description = "Ergonomic binding to DuckDB"
version = "0.3.0"
edition = "2021"

authors = ["Rongcui Dong <rongcuid@outlook.com>"]
repository = "https://github/rongcuid/quackdb"
homepage = "https://github/rongcuid/quackdb"

readme = "README.md"
license = "MIT"
keywords = ["duckdb", "database", "ffi"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
once_cell = "1"

serde = "1"
serde_json = "1"
uuid = "1"
regex = "1"
arrow = "48"

quackdb-internal = { path = "./crates/quackdb-internal", version = "0.3.0" }

[dev-dependencies]
tempfile = "3"
