[workspace]
members = ["crates/*"]

[workspace.dependencies]
libduckdb-sys = "0.9"

arrow = "48"
chrono = ">0.3.19"
serde = "1"
serde_json = "1"
strum = "0.25"

[package]
name = "quackdb"
description = "Ergonomic binding to DuckDB"
version = "0.4.0"
edition = "2021"

authors = ["Rongcui Dong <rongcuid@outlook.com>"]
repository = "https://github.com/rongcuid/quackdb"
homepage = "https://github.com/rongcuid/quackdb"
documentation = "https://docs.rs/quackdb"

readme = "README.md"
license = "MIT"
keywords = ["duckdb", "database", "ffi"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundled = ["quackdb-internal/bundled"]

[dependencies]
thiserror = "1"
cstr = "0.2"

arrow = { workspace = true }

quackdb-internal = { path = "./crates/quackdb-internal", version = "0.4.0" }

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
