[package]
name = "quackdb-conversion"
version = "0.4.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
time = ["dep:time"]

[dependencies]
quackdb-internal = { path = "../quackdb-internal", version = "0.4.0-dev" }

paste = "1"

chrono = ">0.4.19"
time = { version = "0.3", optional = true }
