[package]
name = "quackdb-internal"
description = "Low level binding to libduckdb-sys"
version = "0.3.1"
edition = "2021"

authors = ["Rongcui Dong <rongcuid@outlook.com>"]
repository = "https://github/rongcuid/quackdb"
homepage = "https://github/rongcuid/quackdb"

license = "MIT"
keywords = ["duckdb", "database", "ffi"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundled = ["libduckdb-sys/bundled"]

[dependencies]
thiserror = "1"
paste = "1"

libduckdb-sys = "0.9"

cstr = "0.2"
arrow = { version = "48", features = ["ffi"] }
time = "0.3"
serde = "1"
serde_json = "1"
uuid = "1"
regex = "1"
