[package]
name = "quackdb-internal"
description = "Low level binding to libduckdb-sys"
version = "0.4.0"
edition = "2021"

authors = ["Rongcui Dong <rongcuid@outlook.com>"]
repository = "https://github/rongcuid/quackdb"
homepage = "https://github/rongcuid/quackdb"

license = "MIT"
keywords = ["duckdb", "database", "ffi"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundled = ["libduckdb-sys/bundled"]

[dependencies]
thiserror = "1"
paste = "1"
strum = { workspace = true, features = ["derive"] }

libduckdb-sys = { workspace = true }

arrow = { workspace = true, features = ["ffi"] }
chrono = { workspace = true }
